# stream-transducer

./: LICENSE  Makefile  README.md  stack.yaml  stream-transducer.cabal
src/: Main.hs  StreamTrans.hs  StreamTrans2.hs
