name:                stream-transducer
version:             0.1.0.0
synopsis:            Source code for SO question
description:         https://stackoverflow.com/questions/51131671/stream-transformer-monad-for-vector-stream
homepage:            https://github.com/mcmayer/stream-transducer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable stream-trans-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       StreamTrans
